--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <p>很高兴你来到这里, 你可以通过下面的链接访问我的仓库</p>
 
 <ul>
-  <li> <a href="https://zhou-litong.github.io/">我的仓库</a> </li>
+  <li> <a href="https://zhou-litong.github.io">我的仓库</a> </li>
 </ul>
