--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<p>Hello,大家好！</p>
+<p>Hello！</p>
 <p>我是周理铜，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以通过下面的链接访问我的仓库</p>
-
-<ul>
-  <li> <a href="https://zhou-litong.github.io">我的仓库</a> </li>
-</ul>
+<p>很高兴你来到这里</p>
+我的qq：3023324858
